--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>quack</title>
     <!-- build:css styles/main.css -->
+    <link rel="stylesheet" href="styles/fonts.css" type="text/css">
     <link rel="stylesheet" href="bower_components/semantic-ui/build/packaged/css/semantic.css">
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
@@ -12,11 +13,11 @@
 <header class="ui header">{{me.displayName}}</header>
 <div class="horizontal flex fill">
     <div class="no-margin ui borderless vertical menu">
-        <a class="item">
+        <a class="item" ui-sref="feed">
             <i class="chat icon"></i>
             Feed
         </a>
-        <a class="item">
+        <a class="item" ui-sref="friends">
             <i class="users icon"></i>
             Friends
         </a>
@@ -26,42 +27,22 @@
             Emoticons
         </a>
     </div>
-    <div class="fill vertical flex content-section" ng-controller="ConvoCtrl as conversation">
-        <h2 class="ui header">
-            Hank Leupen
-        </h2>
-
-        <div class="ui feed fill overflow">
-            <div qk-scrollto ng-repeat="message in conversation.messages" class="event">
-                <div class="label" qk-avatar="message.sender"></div>
-                <div class="content">
-                    <div class="date">
-                        {{ message.time | date : 'shortTime'}}
-                    </div>
-                    <div class="summary">
-                        {{ message.body }}
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="ui form">
-            <div class="field">
-                <form ng-keypress="conversation.keypress($event)"><textarea ng-model="conversation.message"></textarea>
-                </form>
-            </div>
-        </div>
-    </div>
+    <div class="fill vertical flex content-section" ui-view></div>
 </div>
 <!-- build:js scripts/index.js -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/semantic-ui/build/packaged/javascript/semantic.js"></script>
 <script src="bower_components/momentjs/moment.js"></script>
+<script src="bower_components/socket.io-client/dist/socket.io.js"></script>
+<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="scripts/index.js"></script>
+<script src="scripts/routes.js"></script>
 <script src="scripts/filters.js"></script>
 <script src="scripts/directives.js"></script>
 <script src="scripts/services.js"></script>
 <script src="scripts/controllers.js"></script>
+<script src="scripts/pq.js"></script>
 <!-- endbuild -->
 </body>
 </html>
